--- a/d07/ex02/Makefile
+++ b/d07/ex02/Makefile
@@ -1,7 +1,7 @@
-NAME = Serialization
+NAME = Array
 OPTION = -c
 FLAG = -Wall -Wextra -Werror -std=c++98
-SRC = main.cpp Array.cpp
+SRC = main.cpp
 OBJ = $(SRC:.cpp=.o)
 
 all: $(NAME)
